# twitter-architecture-lab

./: LICENSE  pyproject.toml
apps/web/: README.md
infraestructure/: docker-compose.yml
