[tool.poetry]
name = "twitter-architecture-lab"
version = "0.1.0"
description = ""
authors = ["andresqb198 <andres.quintero1228@gmail.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12,<4.0"
fastapi = ">=0.129.0,<0.130.0"
uvicorn = ">=0.41.0,<0.42.0"
sqlalchemy = ">=2.0.46,<3.0.0"
psycopg2-binary = ">=2.9.11,<3.0.0"
redis = ">=7.2.0,<8.0.0"
pika = ">=1.3.2,<2.0.0"
pydantic = ">=2.12.5,<3.0.0"
alembic = ">=1.18.4,<2.0.0"
python-jose = ">=3.5.0,<4.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"




























